[package]
name = "ds210final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
tempfile = "3.2.0"
petgraph = "0.6"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.32"